[gd_scene load_steps=4 format=3 uid="uid://b4kioekv88duy"]

[ext_resource type="Script" path="res://enemies/dummy_state_machine.gd" id="1_hmp62"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_av510"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hbbuf"]
radius = 10.0

[node name="EnemyDummy" type="Node3D"]
script = ExtResource("1_hmp62")

[node name="EnemyDummyModel" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="EnemyDummyModel"]
mesh = SubResource("CapsuleMesh_av510")

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyDummyModel"]

[node name="RayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.331326, 0)
target_position = Vector3(0, 0, -10)
collision_mask = 2

[node name="SightRange" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.46053)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightRange"]
shape = SubResource("SphereShape3D_hbbuf")

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="AlertTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="SightRange" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_sight_range_body_exited"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_alert_timer_timeout"]
